<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">imall商城</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_addr_list">AddrListActivity</string>
    <string name="title_activity_new_address">NewAddressActivity</string>
    <string name="title_activity_order_list">OrderListActivity</string>

    <!-- 会员中心 -->
    <string name="login">登录</string>
    <string name="forgetpwd">忘记密码?</string>
    <string name="login_title">用户登录</string>
    <string name="member_title">我的乐商</string>
    <string name="member_username">用户名:</string>
    <string name="member_interal">积分:</string>
    <string name="member_balance">余额:</string>
    <string name="member_topay">待付款</string>
    <string name="member_todeliver">待发货</string>
    <string name="member_tosign">待收货</string>
    <string name="member_tocomment">待评价</string>
    <string name="member_allorders">全部订单</string>
    <string name="member_mycoupons">我的优惠券</string>
    <string name="member_securityinfo">安全信息</string>
    <string name="member_mycollections">我的收藏</string>
    <string name="member_addrmanagement">收货地址管理</string>
    <string name="member_modifypwd">密码修改</string>
    <string name="member_aboutus">关于我们</string>
    <string name="member_feedback">意见反馈</string>
    <string name="member_hotline">客服热线：</string>
    <string name="member_logout">注销登录</string>
    <string name="member_others">其它</string>
    <string name="member_addr_add">添加新地址</string>
    <string name="member_default_addr">默认地址</string>
    <string name="member_save_addr">确认并保存</string>
    <string name="member_receiver">收货人：</string>
    <string name="member_receiver_tel">手机：</string>
    <string name="member_receiver_zone">请点击选择送货区域</string>
    <string name="member_receiver_addr">详细地址：</string>
    <string name="member_receiver_zipcode">邮政编号：</string>
    <string name="member_receiver_delete">删除该地址</string>
    <string name="member_order_unit">张</string>
    <string name="member_order_num">订单编号：</string>
    <string name="member_order_state">订单状态:</string>
    <string name="member_order_money">订单金额:</string>
    <string name="member_order_time">下单时间:</string>
    <string name="member_order_cancel">取消订单</string>
    <string name="member_order_pay">立即支付</string>

    <!-- 分类 -->
    <string name="category_search">请输入商品关键字</string>
    <string name="category_all">全部</string>
    <string name="category_reset">清空重置</string>
    <string name="category_default">综合排行</string>
    <string name="category_salesvolume">销量优先</string>
    <string name="category_filter">筛选</string>
    <!-- 自定义组件 -->
    <string name="custom_alert_title">温馨提示</string>
    <string name="custom_alert_ok">确认</string>
    <string name="custom_alert_cancel">取消</string>

    <!-- 公共 -->
    <string name="common_loading">加载中...</string>

    <!-- 弹出组件 -->
    <string name="popup_choose">请选择</string>
    <string name="title_activity_cate_sub_actvity">CateSubActvity</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_popup">PopupActivity</string>
    <string name="title_activity_product">ProductActivity</string>

    <!-- 商品 -->
    <string name="product_info">商品信息</string>
    <string name="product_collection">收藏</string>
    <string name="product_groupBuy">距离本次团购结束还有：</string>
    <string name="product_day">天</string>
    <string name="product_detail">图文详情</string>
    <string name="product_comments">商品评论</string>
    <string name="product_argument">商品参数</string>
    <string name="product_num">购买数量</string>
    <string name="title_activity_multi_spec">MultiSpecActivity</string>

    <!-- 搜索 -->
    <string name="search_go">搜索</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search_recent">最近浏览</string>

    <!-- 购物车 -->
    <string name="shoppingcart_logintip">购物更便捷,马上前往</string>
    <string name="shoppingcart_login">登录</string>
    <string name="shoppingcart_nostuff">购物车暂无商品</string>
    <string name="shoppingcart_goguangguang">马上去逛逛</string>
    <string name="shoppingcart_delivery">配送方式:</string>
    <string name="shoppingcart_payway">支付方式:</string>
    <string name="shoppingcart_productlist">商品清单</string>
    <string name="shoppingcart_tip1">共有</string>
    <string name="shoppingcart_tip2">件商品</string>
    <string name="shoppingcart_invoicetip">发票信息</string>
    <string name="shoppingcart_invoicenotuse">未开具</string>
    <string name="shoppingcart_coupontip">优惠券</string>
    <string name="shoppingcart_prestoretip">账户余额:</string>
    <string name="shoppingcart_notuse">未使用</string>
    <string name="shoppingcart_productpricetotal">商品总金额:</string>
    <string name="shoppingcart_logisticsfee">运费:</string>
    <string name="shoppingcart_actualpayment">应付金额:</string>
    <string name="shoppingcart_submitorder">提交订单</string>
    <string name="shoppingcart_successtip">恭喜，提交订单成功；我们将及时为您处理！</string>
    <string name="shoppingcart_checkorderdetail">查看订单详情</string>
    <string name="shoppingcart_ordernum">订单编号:</string>
    <string name="shoppingcart_instantpay">立即支付</string>
    <string name="shoppingcart_payment">支付金额:</string>
    <string name="shoppingcart_tip3">温馨提示</string>
    <string name="shoppingcart_tip4">由于系统需要进行订单处理，您可以1～3分钟后才能查 询到您提交的订单，请谅解。</string>
    <string name="shoppingcart_tip5">网上支付订单请您在24小时内支付，否则订单将被自动 取消。</string>
    <string name="shoppingcart_tip6">未及时付款的订单可在我的订单-订单详情进行支付！</string>
    <string name="shoppingcart_gopay">去结算</string>

    <!-- 首页 -->
    <string name="home_search_hint">请输入商品关键字</string>
    <string name="home_snap_up">限时优惠</string>
    <string name="home_group_buy">团购商品</string>
    <string name="home_order_query">订单查询</string>
    <string name="home_integral_exchange">积分兑换</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_submit_order">SubmitOrderActivity</string>
    <string name="title_activity_submit_success">SubmitSuccessActivity</string>

</resources>
