<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bak_color"
    tools:context="cn.edu.zhku.b2c.member.SettingActivity" 
    android:id="@+id/settingAct">
<!--
    <include
        android:id="@+id/header"
        layout="@layout/header" />-->
	 
    <!-- 收货地址管理 -->

    <RelativeLayout
        android:id="@+id/addrManagement"
        android:layout_width="344dp"
        android:layout_height="57dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="61dp"
        android:clickable="true"
        android:background="@color/btn_pressed_white_border">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:text="@string/member_addrmanagement"
            android:textColor="@color/text_color_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <!-- 密码修改 -->

    <RelativeLayout
        android:id="@+id/pwdModification"
        android:layout_width="344dp"
        android:layout_height="57dp"
        android:layout_alignLeft="@+id/addrManagement"
        android:layout_alignRight="@+id/addrManagement"
        android:layout_below="@+id/addrManagement"
        android:layout_marginTop="11dp"
        android:clickable="true"
        android:background="@color/btn_pressed_white_border" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:text="@string/member_modifypwd"
            android:textColor="@color/text_color_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pwdModification"
        android:layout_below="@+id/pwdModification"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="13dp"
        android:text="@string/member_others"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="344dp"
        android:layout_height="169dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="13dp">

        <!-- 关于我们 -->

        <RelativeLayout
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:background="@color/btn_pressed_white_border" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="22dp"
                android:text="@string/member_aboutus"
                android:textColor="@color/text_color_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/arrow" />
        </RelativeLayout>
        
        <!-- 意见反馈 -->
        <RelativeLayout
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:background="@color/btn_pressed_white_border">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="22dp"
                android:text="@string/member_feedback"
                android:textColor="@color/text_color_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/arrow" />
        </RelativeLayout>
        
        <!-- 客服热线 -->
        <RelativeLayout
            android:id="@+id/hot_line"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            android:background="@color/btn_pressed_white_border" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="22dp"
                android:text="@string/member_hotline"
                android:textColor="@color/text_color_light"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/arrow" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout3"
        android:layout_alignRight="@+id/relativeLayout3"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginTop="13dp"
        android:background="@color/btn_pressed_yellow"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/member_logout" />

</RelativeLayout>