<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="344dp"
    android:layout_height="257dp" 
    android:layout_marginLeft="7dp"
    android:layout_marginBottom="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@drawable/order_item_head"
        android:id="@+id/head">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:text="@string/member_order_num" />
		<!-- 订单编号 -->
        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            android:layout_marginLeft="7dp"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:text="1234567890" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/member_wrap">

        <ImageView
            android:id="@+id/order_pic"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/test" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/order_pic"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/order_pic"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            android:text="@string/member_order_state" />

        <!-- 订单状态 -->
        <TextView
            android:id="@+id/order_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            android:text="侍付款" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:textColor="@color/text_color"
            android:layout_marginTop="14dp"
            android:textSize="13sp"
            android:text="共 " />

        <!-- 商品件数 -->
        <TextView
            android:id="@+id/order_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:layout_marginLeft="2dp"
            android:textSize="13sp"
            android:textColor="@color/text_color_red"
            android:text="3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/order_total"
            android:layout_toRightOf="@+id/order_total"
            android:textSize="13sp"
            android:textColor="@color/text_color"
            android:layout_marginLeft="2dp"
            android:text="件商品" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/textView4"
            android:textSize="13sp"
            android:textColor="@color/text_color"
            android:text="@string/member_order_money" />

        <!-- 订单金额  -->
        <TextView
            android:id="@+id/order_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:textSize="13sp"
            android:textColor="@color/text_color_red"
            android:layout_marginLeft="2dp"
            android:text="￥268.00" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:textSize="12sp"
            android:textColor="@color/text_color"
            android:layout_marginTop="12dp"
            android:text="@string/member_order_time" />

        <!-- 下单时间 -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:textSize="12sp"
            android:textColor="@color/text_color"
            android:layout_marginLeft="2dp"
            android:text="2014-03-08 14：22：36" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_below="@+id/order_pic"
            android:layout_marginTop="12dp" 
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/dotted_line"/>
        
       <Button
        android:id="@+id/button1"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_below="@+id/view1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:background="@color/btn_pressed_grey_corner"
        android:text="@string/member_order_cancel" />

       <Button
           android:id="@+id/button2"
           android:layout_width="157dp"
           android:layout_height="44dp"
           android:layout_toRightOf="@+id/button1"
           android:layout_alignBaseline="@+id/button1"
           android:textColor="@color/text_color_white"
       	   android:textSize="15sp"
       	   android:layout_marginLeft="12dp"
       	   android:background="@color/btn_pressed_yellow"
           android:text="@string/member_order_pay" />

    </RelativeLayout>



</RelativeLayout>
